--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,11 +4,15 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>AWESOME ASSIGNMENT</title>
+    <title> Hello World </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
+<header> Week One Assignment 
+<h1> Fatuma Abdi </h1>
+<a href="https://lh3.googleusercontent.com/gIaaufVp8FqOn3Qe-wrt2cETW3SxrkVTuJZjj8naMtAVsRr45MW52XEfkS5goK00fV1tM_ZC7CCMJfhdICihE2Qz087fvg6PK6f7Cfyn4G9ZTXXuzD8bEZ5l9k_dPJ7oIRvk0W7DeQ=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/gIaaufVp8FqOn3Qe-wrt2cETW3SxrkVTuJZjj8naMtAVsRr45MW52XEfkS5goK00fV1tM_ZC7CCMJfhdICihE2Qz087fvg6PK6f7Cfyn4G9ZTXXuzD8bEZ5l9k_dPJ7oIRvk0W7DeQ=w600-h315-p-k" /> </a>
+</header>
 <body>
     <!-- Create a header element  -->
 
@@ -17,8 +21,19 @@
     <!-- Include an image -->
 
     <!-- Create an unordered list with 3 list items of fun facts about you -->
-
+<ul>
+    <li>  I was born in Nairobi, Kenya and moved to Minneapolis when I was three months old.</li>
+    <li>  I'm a big travelor, I've been to fourteen countries so far.</li>
+    <li>  I skydived out of a plane at 13,000 feet in the air. </li>
+</ul>
     <!-- Create a footer element -->
+    <footer> 
+<p>
+ “Not everything that is faced can be changed; but nothing can be changed until it is faced,” -James Baldwin
+
+</p>
+
+    </footer>
 
     <!-- Inside your footer, put a <p> element with your favorite quote -->
 </body>
